[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resanter_logger"
version = "0.0.4"
authors = [
  { name="resanter", email="reoskaro434@gmail.com" },
]
description = "Simple logger"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/reoskaro434/logger"
"Bug Tracker" = "https://github.com/reoskaro434/logger/issues"
